<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <include layout="@layout/toolbar" />

            <LinearLayout
                android:id="@+id/Linear"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/referencia"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="#000070"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="380dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="7dp"
                android:text="@string/referencia2"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="38dp"
                android:background="@drawable/missao"/>

            <ImageView
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginTop="-60dp"
                android:layout_marginStart="170dp"
                android:background="@drawable/visao"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="-60dp"
                android:layout_marginStart="310dp"
                android:background="@drawable/valores"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="35dp"
                android:text="@string/missao"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="185dp"
                android:layout_marginTop="-25dp"
                android:text="@string/visao"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="300dp"
                android:layout_marginTop="-25dp"
                android:text="@string/valores"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:text="@string/historia"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000070"/>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="320dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/diretoria"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="220dp"
                android:layout_marginTop="-335dp"
                android:text="@string/historia2"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/historia3"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/dirigentes"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000070"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/dirigentes2"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/colaboradores"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000070"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/colaboradores2"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/qualidades"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000070"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/qualidades2"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/instalacao"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000070"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/instalacao2"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/instalacao3"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/instalacao4"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/instalacao5"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/instalacao6"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/instalacao7"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/instalacao8"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/instalacao9"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/instalacao10"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/instalacao11"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/historico"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000070"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:text="@string/historico2"
                android:textSize="15sp"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="2dp"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:textColor="#000000"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>