<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/cadastrar">

    <include layout="@layout/toolbar"/>

    <TextView
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textColor="#F6C01E"
        android:text="@string/sublinhado"/>

    <EditText
        android:id="@+id/nome"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#000070"
        android:hint="@string/nome" />

    <EditText
        android:id="@+id/sobrenome"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="220dp"
        android:backgroundTint="#000070"
        android:hint="@string/sobrenome"/>

    <EditText
        android:id="@+id/Email"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#000070"
        android:hint="@string/e_mail"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/confirmEmail"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#000070"
        android:hint="@string/confirme_seu_e_mail"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/Senha"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#000070"
        android:inputType="textPassword"
        android:hint="@string/senha"/>

    <EditText
        android:id="@+id/confirmSenha"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="220dp"
        android:backgroundTint="#000070"
        android:inputType="textPassword"
        android:hint="@string/confirme_a_senha"/>

    <Button
        android:id="@+id/Cadastrar"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/form_hact"
        android:textSize="25dp"
        android:text="@string/cadastrar" />

    <TextView
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        android:textSize="25dp"
        android:textColor="#F6C01E"
        android:text="Já estou cadastrado!"/>

    <Button
        android:id="@+id/AcessarCadastro"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/form_hact"
        android:textSize="25dp"
        android:text="@string/acessar" />


</LinearLayout>