<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/acessibilidade">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <include layout="@layout/toolbar" />



            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="80dp"
                android:text="@string/quando"
                android:textAlignment="center"
                android:textColor="#4b4b4b"
                android:textSize="18sp"
                android:textStyle="bold"/>
            
            <TextView
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/necessario"
                android:textAlignment="center"
                android:textColor="#4b4b4b"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <TextView
            android:layout_width="370dp"
            android:layout_height="260dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/documentos"
            android:textAlignment="center"
            android:textColor="#4b4b4b"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="370dp"
            android:layout_height="260dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/seguida"
            android:textAlignment="center"
            android:textColor="#4b4b4b"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>
    </ScrollView>


</androidx.drawerlayout.widget.DrawerLayout>